<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/m_archive_zip"
        android:title="@string/create_zip"
        app:showAsAction="never" />

    <item
        android:id="@+id/m_archive_7z"
        android:title="@string/compress_sevenz"
        app:showAsAction="never" />

    <item
        android:id="@+id/m_archive_tar"
        android:title="@string/compress_tar"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_action_unselect_all"
        android:icon="@drawable/ic_close"
        app:showAsAction="always"
        android:title="@string/close" />

    <item
        android:id="@+id/menu_action_select_all"
        android:title="@string/select_all"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_copy_to"
        android:title="@string/copy_to"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_move_to"
        android:title="@string/move"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

</menu>
