<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="key_extract_path"
        android:title="@string/extract_path"
        android:icon="@drawable/ic_folder_2"
        android:summary="@string/extract_path_summary"
        android:dialogTitle="@string/extract_path"/>

    <EditTextPreference
        android:key="key_archive_path"
        android:title="@string/archive_path"
        android:icon="@drawable/ic_folder_2"
        android:summary="@string/archive_path_summary"
        android:dialogTitle="@string/archive_path"/>

    <EditTextPreference
        android:key="zstd_compression_level"
        android:title="ZSTD Compression Level"
        android:dialogTitle="@string/compression_level"
        android:dialogMessage="@string/please_enter_value_between_0_and_22"
        android:defaultValue="3"
        android:inputType="number"
        android:icon="@drawable/ic_compress"/>

    <SwitchPreferenceCompat
        android:key="fast_search"
        android:title="@string/fast_search"
        android:summary="@string/fast_search_summary"
        android:defaultValue="false"
        android:icon="@drawable/ic_search"/>

    <PreferenceCategory>

        <Preference
            android:key="key_about"
            android:title="@string/about"
            android:icon="@drawable/ic_info"/>

        <Preference
            android:key="key_privacy_policy"
            android:title="@string/privacy_policy"
            android:icon="@drawable/ic_privacy_policy"/>
    </PreferenceCategory>
</PreferenceScreen>