<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <TextView
        android:id="@+id/fileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="File Name"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOpenWith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_with"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        app:cornerRadius="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        app:cornerRadius="5dp"
        android:text="@string/extract" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multi_part_extract"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMultiExtract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_weight="1"
            app:cornerRadius="5dp"
            android:text="@string/rar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMulti7zExtract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            app:cornerRadius="5dp"
            android:text="@string/_7z" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMultiZipExtract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_marginStart="10dp"
            app:cornerRadius="5dp"
            android:text="@string/zip" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFileInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="5dp"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/file_info" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/delete" />

</LinearLayout>
