<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tv_permission_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/storage_access_permission_text"
        android:textSize="16sp"
        android:layout_margin="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_grant_access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/grant_access"
        app:cornerRadius="10dp"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tv_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:layout_gravity="center"
        android:textColor="@color/md_theme_primary"
        android:textSize="14sp"
        android:clickable="true"
        android:layout_margin="16dp"
        android:focusable="true"/>
</LinearLayout>